[package]
name = "release_dog"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.9"
tokio = { version = "1" , features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
notify-rust = "4"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
